--- a/css/loader.css
+++ b/css/loader.css
@@ -1,40 +1,55 @@
-.gooey
-  position: absolute
-  top: 50%
-  left: 50%
-  width: 142px
-  height: 40px
-  margin: -20px 0 0 -71px
-  background: white
-  .dot
-    position: absolute
-    width: 16px
-    height: 16px
-    top: 12px
-    left: 15px
-    filter: blur(4px)
-    background: #86c042
-    border-radius: 50%
-    transform: translateX(0)
-    animation: dot 2.8s infinite
-  .dots
-    transform: translateX(0)
-    margin-top: 12px
-    margin-left: 31px
-    animation: dots 2.8s infinite
-    span
-      display: block
-      float: left
-      width: 16px
-      height: 16px
-      margin-left: 16px
-      filter: blur(4px)
-      background: #86c042
-      border-radius: 50%
 
-@keyframes dot
-  50%
-    transform: translateX(96px)
-@keyframes dots
-  50%
-    transform: translateX(-31px)
+.loader{
+	border:3px solid #d6336c;
+	width:200px;
+	height:200px;
+	border-radius:50%; 
+	border-left-color: transparent;
+  border-right-color: transparent;
+	animation:rotate 2s cubic-bezier(0.26, 1.36, 0.74,-0.29) infinite;
+}
+#loader2{
+	border:3px solid #3bc9db;
+	width:220px;
+	height:220px;
+	position:relative;
+	top:-216px;
+	border-left-color: transparent;
+  border-right-color: transparent;
+	animation:rotate2 2s cubic-bezier(0.26, 1.36, 0.74,-0.29) infinite;
+}
+#loader3{
+	border:3px solid #d6336c;
+	width:240px;
+	height:240px;
+	position:relative;
+	top:-452px;
+	border-left-color: transparent;
+  border-right-color: transparent;
+	animation:rotate 2s cubic-bezier(0.26, 1.36, 0.74,-0.29) infinite;
+}
+#loader4{
+	border:3px solid #3bc9db;
+	width:260px;
+	height:260px;
+	position:relative;
+	top:-708px;
+	border-left-color: transparent;
+  border-right-color: transparent;
+	animation:rotate2 2s cubic-bezier(0.26, 1.36, 0.74,-0.29) infinite;
+}
+@keyframes rotate{
+	0%{transform:rotateZ(-360deg)}
+	100%{transform:rotateZ(0deg)}
+}
+@keyframes rotate2{
+	0%{transform:rotateZ(360deg)}
+	100%{transform:rotateZ(0deg)}
+}
+#text{
+	color:white;
+	font-family:Arial;
+	font-size:20px;
+	position:relative;
+	top:-857px;
+}
