--- a/css/loader.css
+++ b/css/loader.css
@@ -1,21 +1,23 @@
-.loading {
-    height: 0;
-    width: 0;
-    padding: 15px;
-    border: 6px solid #ccc;
-    border-right-color: #888;
-    border-radius: 22px;
-    -webkit-animation: rotate 1s infinite linear;
-    /* left, top and position just for the demo! */
-    position: absolute;
+#loading-bar-spinner.spinner {
     left: 50%;
+    margin-left: -20px;
     top: 50%;
-  }
-  
-  @-webkit-keyframes rotate {
-    /* 100% keyframe for  clockwise. 
-       use 0% instead for anticlockwise */
-    100% {
-      -webkit-transform: rotate(360deg);
-    }
-  }
+    margin-top: -20px;
+    position: absolute;
+    z-index: 19 !important;
+    animation: loading-bar-spinner 400ms linear infinite;
+}
+
+#loading-bar-spinner.spinner .spinner-icon {
+    width: 40px;
+    height: 40px;
+    border:  solid 4px transparent;
+    border-top-color:  #00C8B1 !important;
+    border-left-color: #00C8B1 !important;
+    border-radius: 50%;
+}
+
+@keyframes loading-bar-spinner {
+  0%   { transform: rotate(0deg);   transform: rotate(0deg); }
+  100% { transform: rotate(360deg); transform: rotate(360deg); }
+}
